<!--
  ~ Created by Android Team MIS-SEG Year 2021
  ~ Copyright (c) 2021. Guanzon Central Office
  ~ Guanzon Bldg., Perez Blvd., Dagupan City, Pangasinan 2400
  ~ Project name : GhostRider_Android
  ~ Module : GhostRider_Android.app
  ~ Electronic Personnel Access Control Security System
  ~ project file created : 4/24/21 3:19 PM
  ~ project file last modified : 4/24/21 3:17 PM
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>