<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.Fragment_AH_Dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_dashboard_header">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="50dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardview_dashboard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="15dp"
                        app:cardMaxElevation="5dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingHorizontal="10dp"
                            android:paddingTop="70dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="3dp"
                                android:fontFamily="@font/roboto_regular"
                                android:text="@string/lsMainOffice"
                                android:textColor="@color/material_black" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="3dp"
                                android:fontFamily="@font/roboto_regular"
                                android:text="@string/lsMainAddress"
                                android:textColor="@color/material_black" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="3dp"
                                android:fontFamily="@font/roboto_regular"
                                android:text="@string/lsMainContact"
                                android:textColor="@color/material_black" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:fontFamily="@font/roboto_regular"
                                android:text="@string/lsMainWebsite"
                                android:textColor="@color/material_black" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/guanzon_orange"
                                android:layout_marginTop="10dp"/>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginTop="10dp">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:layout_marginBottom="5dp"
                                    android:fontFamily="@font/roboto_regular"
                                    android:text="Daily Branch Opening"
                                    android:textColor="@color/material_black" />

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:layout_marginBottom="5dp"
                                    android:fontFamily="@font/roboto_regular"
                                    android:text="April 10, 2021"
                                    android:gravity="end"
                                    android:textColor="@color/material_black" />

                            </LinearLayout>

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recyclerview_branchOpening"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </RelativeLayout>

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/circular_imageview"
                    android:padding="10dp"
                    android:src="@drawable/ic_ghostrider_logo_day" />

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>